--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-textarea {
-  resize: none;
-}
-
-textarea::-webkit-scrollbar {
-  width: 0px;
-}
-
-p {
-  overflow-wrap: anywhere;
+@layer base {
+  textarea {
+    resize: none;
+  }
+  
+  textarea::-webkit-scrollbar {
+    width: 0px;
+  }
+  
+  p {
+    overflow-wrap: anywhere;
+  }
 }
